--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to your camera to scan QR codes</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone permission is required for camera access to be processed correctly. Your audio data is not used by the app.</string>
 </dict>
 </plist>
