--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  mobile_scanner: ^5.0.0
+  barcode_scan2: ^4.2.1
   provider: ^6.1.0
   uuid: ^4.0.0
   permission_handler: ^11.0.0
