--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
   sdk: ^3.9.2
@@ -36,11 +36,18 @@ dependencies:
   provider: ^6.1.0
   uuid: ^4.0.0
   permission_handler: ^11.0.0
-  shared_preferences: ^2.2.0
-  url_launcher: ^6.2.0
   share_plus: ^7.2.0
   path_provider: ^2.1.0
   simple_animations: ^5.1.0
+  firebase_core: ^4.2.0
+  firebase_messaging: ^16.0.3
+  flutter_local_notifications: ^19.5.0
+  appsflyer_sdk: ^6.17.5
+  app_tracking_transparency: ^2.0.6+1
+  shared_preferences: ^2.5.3
+  webview_flutter_wkwebview: ^3.23.1
+  url_launcher: ^6.3.2
+  external_app_launcher: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +70,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
